--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,5 +10,5 @@ jobs:
           go-version: 1.22.x
       - name: Tests
         run: go test -race -covermode=atomic -coverprofile=coverage.txt ./...
-      - name: Coverage
-        run: bash <(curl -s https://codecov.io/bash)
+   #  - name: Coverage
+   #    run: bash <(curl -s https://codecov.io/bash)
